# cereal-box-styles

./: LICENSE  README.md  gitignore  olog_compiler.py  pyproject.toml
cereal_box_styles/: __init__.py  server.py
cereal_box_styles/data/legacy/: categories.json  templates.json  transformation_maps.json
cereal_box_styles/data/ologs/: cereal_box_styles.olog.yaml  cereal_box_styles_intentionality.olog.yaml
cereal_box_styles/tools/: __init__.py  parser.py  transformer.py  utils.py
tests/: __init__.py  test_server.py
